add para in index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div class="container">
         <h1>HI</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit exercitationem voluptatem ab perspiciatis? Libero aut alias magni dicta provident! Molestias eum voluptatum quia aspernatur tempore accusantium ipsam deleniti, blanditiis minus.</p>
     </div>
 </body>
 </html>
